k8s/apps/prod/s3-storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-storage
  labels:
    name: s3-storage
