k8s/apps/prod/s3-storage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3-ingress
  namespace: s3-storage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.oplabs.us`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: s3-storage
          port: 9000
  tls:
    secretName: oplabs-us-tls
